# estudely-askai

./: README.md  pyproject.toml
src/estudely_askai/: cli.py  config.py  errors.py  ollama_client.py
tests/: test_cli_smoke.py  test_config.py  test_ollama_client.py
