[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "estudely-askai"
version = "0.2.1"
description = "CLI for querying Ollama models via HTTP API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["tomli>=2; python_version<'3.11'"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
askai = "estudely_askai.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
